fixed nav z-index

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -13,6 +13,7 @@ nav {
     width: 100%;
     height: 3.5rem;
     background-color: #0a0a0a;
+    z-index: 9999;
 }
 
 @supports ( -webkit-backdrop-filter: none ) or ( backdrop-filter: none ) {
